--- a/public/ll.html
+++ b/public/ll.html
@@ -1,6 +1,21 @@
 <!DOCTYPE html>
 <html lang="tr">
-<%- include('../partials/headerhome', {title}); %>
+<head>
+  <meta charset="UTF-8">
+  <meta http-equiv="X-UA-Compatible" content="IE=edge">
+  <meta name="viewport"
+  
+    <!-- Bootswatch lumen -->
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootswatch@5.0.2/dist/lumen/bootstrap.min.css"
+      integrity="sha256-2zyNvUTezoJ3p/Kd78Ia/B5+UdtRtlQeRJSmFlHEn6Q="
+      crossorigin="anonymous"
+    />
+    <link rel="stylesheet" href="./stylesheets/stylehome.css" />
+    <title>Welcome to MOOD</title>
+  </head>
+  
 
   <body class="body" id="loginbody">
     <div class="row d-flex justify-content-center">
@@ -24,7 +39,17 @@
           </div>
         </div>
       </div>
-      <%- include('../partials/footer') %>
+      <script
+  src="https://code.jquery.com/jquery-3.5.1.slim.min.js"
+  integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj"
+  crossorigin="anonymous"
+></script>
+<script src="/socket.io/socket.io.js"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
+crossorigin="anonymous">
+</script>
+
   </body>
 
 </html>
