--- a/public/l2.html
+++ b/public/l2.html
@@ -1,10 +1,71 @@
 <!DOCTYPE html>
 <html lang="tr">
   <head>
-    <meta charset="UTF-8" />
-    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Document</title>
+    <!-- Required meta tags -->
+    <meta charset="utf-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+  
+    <!-- Bootswatch lumen -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootswatch@5.0.2/dist/lumen/bootstrap.min.css" />
+    <link
+      rel="stylesheet"
+      href="https://pro.fontawesome.com/releases/v5.10.0/css/all.css"
+      integrity="sha384-AYmEC3Yw5cVb3ZcuHtOA93w35dYTsvhLPVnYs9eStHfGJvOvKxVfELGroGkvsg+p"
+      crossorigin="anonymous"
+    />
+    <!--   <link rel="stylesheet" href="../stylesheets/stylehome.css" /> -->
+    <link rel="icon" href="./images/logo.png" type="img" />
+    <title>Welcome to MOOD</title>
   </head>
-  <body></body>
+  <body>
+    <form id="uploadForm" action="/upload" method="post" enctype="multipart/form-data">
+    <div class="col-6 col-lg-6 offset-1 offset-lg-1 drop-zone border-success border-1">
+      <input type="text" id="title">
+      <input type="file" name="imagename" id="imagename">
+      <span style="margin-top: 5px;" class="drop-zone-prompt">Drag and drop image from your computer or
+        click to upload</span>
+        <input id="btnSubmit" type="submit" name="submit" value="Submit">
+    </div></form>
+    <h1>Ajax Post Result</h1>
+<span id="result"></span>
+    <script src="https://cdn.jsdelivr.net/npm/jquery@3.6.0/dist/jquery.min.js" integrity="sha256-/xUj+3OJU5yExlq6GSYGSHk7tPXikynS7ogEvDej/m4=" crossorigin="anonymous"></script>
+    <script src="/socket.io/socket.io.js"></script>
+    </script>
+    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" 
+    integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" 
+    crossorigin="anonymous">
+    </script>
+    <script>
+      $(document).ready(function ()  {
+        $('#btnSubmit').click(function (e) {
+          e.preventDefault();
+          const form = $('#uploadForm')[0];
+          const data = new FormData(form);
+          data.append("customField", "This is extra field");
+          $('#btnSubmit').prop("disabled", true);
+
+          $.ajax({
+            type: "POST",
+            enctype: 'multipart/form-data',
+            url: '/upload',
+            data: data,
+            processData: false,
+            contentType: false,
+            cache: false,
+            success: function (data) {
+              $("#result").text(data);
+              console.log("SUCCESS : ", data);
+              $("#btnSubmit").prop("disabled", false);
+            },
+            error: function (e) {
+              $("#result").text(e.responseText);
+              console.log("ERROR : ", e);
+              $("#btnSubmit").prop("disabled", false);
+              
+            }
+          });
+        })
+        return false;
+      })
+    </script></body>
 </html>
